マークダウン記法の実例を追記

--- a/用語-マークダウン記法.md
+++ b/用語-マークダウン記法.md
@@ -4,9 +4,131 @@
 
 この文書もマークダウン記法で書かれています。
 
-難しい物ではないので、すぐ覚えられるはずです。
+HTMLより簡単なので、すぐ覚えられるはずです。
 
 ## マークダウン記法が書きやすくなるエディタ
 
 * [MacDown](用語-MacDown.md)
 * [VSCode](用語-VSCode.md)
+
+- - -
+
+# マークダウン記法 見出し1
+
+空行は文節の区切りとして大切。
+HTMLにおけるpは存在するがbrは存在しないと考える。
+
+## 見出し2
+これは見出し2です。
+### 見出し3
+これは見出し3です。
+#### 見出し4
+これは見出し4です。
+##### 見出し5
+これは見出し5です。
+###### 見出し6
+これは見出し6です。
+
+## リスト
+
+- リスト
+- リスト
+	- リスト
+	- リスト
+		- リスト
+		- リスト
+	- リスト
+	- リスト
+- リスト
+- リスト
+
+## 番号付きリスト
+
+1. 番号付きリスト
+1. 番号付きリスト
+1. 番号付きリスト
+	7. 番号付きリスト
+	5. 番号付きリスト
+
+## 引用
+
+> これは引用です。
+> 続けて何行も書けます。
+> 
+> 行の扱いはbrではなくpで考えます。
+> 
+> > 二重引用もできます。
+> > 
+> 
+> 
+
+## pre記法
+
+### TABで書く場合
+
+	# コードブロックとして。
+	# これはTABで書いた結果。
+	a = hoge(fuga);
+
+### 半角スペース４で書く場合
+
+    # コードブロックとして。
+    # これは半角スペース4で書いた結果。
+    b = cat(dog);
+
+## code記法
+
+`バッククォートで囲む`のがcode記法です。
+
+## 強調
+
+強調には em と strong があります。
+
+### em
+
+アスタリスク1個で挟むと *italicになる* 
+
+アンダースコア1個で挟むと _italicになる_
+
+### strong
+
+アスタリスク２個で挟むと **boldになる**
+
+アンダースコア2個で挟むと __boldになる__
+
+### em + strong
+
+アスタリスク3個で挟むと ***em + strong になる***
+
+アンダースコア3個で挟むと ___em + strong になる___
+
+## 水平線
+
+書き方は何種類もある。
+
+***
+___
+
+---
+
+_ _ _
+
+* * *
+
+## リンク
+
+[Google](https://www.google.co.jp)
+[Apple](https://apple.com)
+[Facebook](https://facebook.com)
+[Amazon](https://www.amazon.co.jp/)
+
+空白で開けると環境によっては認識されないので開けない方が良い。
+
+### ファイルへのリンクも出来る
+
+[README.md](README.md)
+
+## 参考文献
+
+[Markdown記法 サンプル集 - Qiita](https://qiita.com/tbpgr/items/989c6badefff69377da7)
+
